 =======================================================================
 ==CHANGES.txt
 =======================================================================

Apache Gora 0.6.1 Release - 02/03/2015 (dd/mm/yyyy)
Release Report - http://s.apache.org/l69 

* GORA-384 Provide documentation on Gora Shims layer (lewismc)

* GORA-415 hadoop-client dependency should be optional in gora-core (hsaputra via lewismc)

* GORA-410 Change logging behavior to pass exception object to LOG methods (Gerhard Gossen via lewismc)

* GORA-330 Import Gora Gradle plugin (drazzib)


Apache Gora 0.6 Release - 12/02/2015 (dd/mm/yyyy)
Release Report - http://s.apache.org/gora-0.6

* GORA-406 Upgrade Solr dependencies to 4.10.3 (lewismc)

* GORA-407 Upgrade restlet dependencies to 2.3.1 for gora-solr (lewismc)

* GORA-388 MongoStore: Fix handling of Utf8 in filters (drazzib)

* GORA-375 Upgrade HBase to 0.98 (Talat UYARER via lewismc)

* GORA-389 MongoStore: Document or List mapping change cause NPE in clearDirty() (drazzib)

* GORA-390 Rework generated isXXXDirty methods. (drazzib)
 
* GORA-381 Fix Guava dependency mismatch post GoraCI (lewismc)

* GORA-374 Implement Rackspace Cloud Orchestration in GoraCI (lewismc)

* GORA-371 Exception setXIncludeAware UnsupportedOperationException (Viacheslav Dobromyslov (dobromyslov) via lewismc)

* GORA-378 Log error trace as well as error message in GoraRecordWriter (lewismc)

* GORA-376 Gora Cassandra doesn't accept user credentials for connection (Viju Kothuvatiparambil via lewismc) 

* GORA-372: Fixed runtime error with the slf4j-api version conflict. (Viacheslav Dobromyslov (dobromyslov) via hsaputra)

Apache Gora 0.5 Release - 15/09/14
Release Report - http://s.apache.org/0.5report

* GORA-369 Obtain consistent formatting of all pom.xml's (lewismc)

* GORA-346 Create shim layer to support multiple hadoop versions (Moritz Hoffmann, rmarroquin, hsaputra, Mikhail Bernadsky via lewismc)
