@@ -1,5 +1,4 @@
 # Licensed to the Apache Software Foundation (ASF) under one or more
-gora.solrstore.solr.solrjserver=http
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
 # The ASF licenses this file to You under the Apache License, Version 2.0
@@ -17,3 +16,6 @@ gora.solrstore.solr.solrjserver=http
 gora.solrstore.solr.url=http://localhost:9876/solr
 gora.datastore.solr.commit_within=0
 gora.solrstore.solr.solrjserver=http
+gora.solrstore.solr.solrjserver.user_auth=false
+#gora.solrstore.solr.solrjserver.username=solr-user
+#gora.solrstore.solr.solrjserver.password=solr-password
